# Agents-AI

./: .gitignore  README.md  pyproject.toml
UI/: webpage.py
agents/: pyproject.toml  rag.py  react.py
agents/UI/: webpage.py
agents/agents/: react.py
media/: chroma.sqlite3
tests/: test.py  test_list.txt
tests/test_drawings/: Circle.bak  Circle.dwg  Cylinder_sphere.dwg  Square.bak  Square.dwg  hourglass.dwg
