[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.agents.dependencies]
google-generativeai = "^0.8.4"
pyautogui = "^0.9.54"
python-dotenv = "^1.0.1"
opencv-python = "^4.11.0.86"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
